versions/0.8.1/_sources/refs/_aws-cdk_aws-ecs.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"YX6ZvpLZZO3TI3k7OL9oTgQdiGyHmRkvwx08xMMgg3o="}

@aws-cdk/aws-ecs
================

.. tabs::

   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/ecs/0.8.1/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:ecs:jar:0.8.1'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="ecs" rev="0.8.1"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>ecs</artifactId>
           <version>0.8.1</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:ecs:0.8.1'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='ecs', version='0.8.1')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ecs/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ecs@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ecs": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ecs@0.8.1


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-ecs/v/0.8.1>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-ecs@0.8.1

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-ecs": "^0.8.1"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-ecs@0.8.1



.. mdinclude:: ./__aws-cdk_aws-ecs.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-ecs

ClusterArn
^^^^^^^^^^

.. py:class:: ClusterArn([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.ClusterArn;

      .. code-tab:: javascript

         const { ClusterArn } = require('@aws-cdk/aws-ecs');

      .. code-tab:: typescript

         import { ClusterArn } from '@aws-cdk/aws-ecs';



   :extends: :py:class:`@aws-cdk/cdk.Arn`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined

ServiceName
^^^^^^^^^^^

.. py:class:: ServiceName([valueOrFunction])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.ServiceName;

      .. code-tab:: javascript

         const { ServiceName } = require('@aws-cdk/aws-ecs');

      .. code-tab:: typescript

         import { ServiceName } from '@aws-cdk/aws-ecs';



   :extends: :py:class:`@aws-cdk/cdk.Token`
   :param valueOrFunction: 
   :type valueOrFunction: any or undefined


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-ecs.cloudformation

ClusterResource
~~~~~~~~~~~~~~~

.. py:class:: ClusterResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.ClusterResource;

      .. code-tab:: javascript

         const { cloudformation.ClusterResource } = require('@aws-cdk/aws-ecs');

      .. code-tab:: typescript

         import { cloudformation.ClusterResource } from '@aws-cdk/aws-ecs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClusterResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClusterResource``
   :type properties: :py:class:`~@aws-cdk/aws-ecs.cloudformation.ClusterResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: clusterArn

      :type: :py:class:`~@aws-cdk/aws-ecs.ClusterArn` *(readonly)*


ClusterResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClusterResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.ClusterResourceProps;

      .. code-tab:: javascript

         // cloudformation.ClusterResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ClusterResourceProps } from '@aws-cdk/aws-ecs';





   .. py:attribute:: clusterName

      ``AWS::ECS::Cluster.ClusterName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-cluster.html#cfn-ecs-cluster-clustername


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


ServiceResource
~~~~~~~~~~~~~~~

.. py:class:: ServiceResource(parent, name, properties)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource;

      .. code-tab:: javascript

         const { cloudformation.ServiceResource } = require('@aws-cdk/aws-ecs');

      .. code-tab:: typescript

         import { cloudformation.ServiceResource } from '@aws-cdk/aws-ecs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ServiceResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ServiceResource``
   :type properties: :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


   .. py:attribute:: serviceName

      :type: :py:class:`~@aws-cdk/aws-ecs.ServiceName` *(readonly)*

   .. py:class:: AwsVpcConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.AwsVpcConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.AwsVpcConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.AwsVpcConfigurationProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: assignPublicIp

         ``ServiceResource.AwsVpcConfigurationProperty.AssignPublicIp``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-awsvpcconfiguration.html#cfn-ecs-service-awsvpcconfiguration-assignpublicip


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: securityGroups

         ``ServiceResource.AwsVpcConfigurationProperty.SecurityGroups``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-awsvpcconfiguration.html#cfn-ecs-service-awsvpcconfiguration-securitygroups


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subnets

         ``ServiceResource.AwsVpcConfigurationProperty.Subnets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-awsvpcconfiguration.html#cfn-ecs-service-awsvpcconfiguration-subnets


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: DeploymentConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.DeploymentConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.DeploymentConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.DeploymentConfigurationProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: maximumPercent

         ``ServiceResource.DeploymentConfigurationProperty.MaximumPercent``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-deploymentconfiguration.html#cfn-ecs-service-deploymentconfiguration-maximumpercent


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: minimumHealthyPercent

         ``ServiceResource.DeploymentConfigurationProperty.MinimumHealthyPercent``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-deploymentconfiguration.html#cfn-ecs-service-deploymentconfiguration-minimumhealthypercent


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LoadBalancerProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.LoadBalancerProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.LoadBalancerProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.LoadBalancerProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: containerName

         ``ServiceResource.LoadBalancerProperty.ContainerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-loadbalancers.html#cfn-ecs-service-loadbalancers-containername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: containerPort

         ``ServiceResource.LoadBalancerProperty.ContainerPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-loadbalancers.html#cfn-ecs-service-loadbalancers-containerport


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: loadBalancerName

         ``ServiceResource.LoadBalancerProperty.LoadBalancerName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-loadbalancers.html#cfn-ecs-service-loadbalancers-loadbalancername


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: targetGroupArn

         ``ServiceResource.LoadBalancerProperty.TargetGroupArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-loadbalancers.html#cfn-ecs-service-loadbalancers-targetgrouparn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: NetworkConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.NetworkConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.NetworkConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.NetworkConfigurationProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: awsvpcConfiguration

         ``ServiceResource.NetworkConfigurationProperty.AwsvpcConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-networkconfiguration.html#cfn-ecs-service-networkconfiguration-awsvpcconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.AwsVpcConfigurationProperty` or undefined


   .. py:class:: PlacementConstraintProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.PlacementConstraintProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.PlacementConstraintProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.PlacementConstraintProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: expression

         ``ServiceResource.PlacementConstraintProperty.Expression``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-placementconstraint.html#cfn-ecs-service-placementconstraint-expression


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ServiceResource.PlacementConstraintProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-placementconstraint.html#cfn-ecs-service-placementconstraint-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: PlacementStrategyProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.PlacementStrategyProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.PlacementStrategyProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.PlacementStrategyProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: field

         ``ServiceResource.PlacementStrategyProperty.Field``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-placementstrategy.html#cfn-ecs-service-placementstrategy-field


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``ServiceResource.PlacementStrategyProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-placementstrategy.html#cfn-ecs-service-placementstrategy-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: ServiceRegistryProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.ServiceResource.ServiceRegistryProperty;

         .. code-tab:: javascript

            // cloudformation.ServiceResource.ServiceRegistryProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.ServiceResource.ServiceRegistryProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: port

         ``ServiceResource.ServiceRegistryProperty.Port``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-serviceregistry.html#cfn-ecs-service-serviceregistry-port


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: registryArn

         ``ServiceResource.ServiceRegistryProperty.RegistryArn``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-service-serviceregistry.html#cfn-ecs-service-serviceregistry-registryarn


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ServiceResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ServiceResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.ServiceResourceProps;

      .. code-tab:: javascript

         // cloudformation.ServiceResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.ServiceResourceProps } from '@aws-cdk/aws-ecs';





   .. py:attribute:: taskDefinition

      ``AWS::ECS::Service.TaskDefinition``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-taskdefinition


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: cluster

      ``AWS::ECS::Service.Cluster``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-cluster


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: deploymentConfiguration

      ``AWS::ECS::Service.DeploymentConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-deploymentconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.DeploymentConfigurationProperty` or undefined


   .. py:attribute:: desiredCount

      ``AWS::ECS::Service.DesiredCount``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-desiredcount


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: healthCheckGracePeriodSeconds

      ``AWS::ECS::Service.HealthCheckGracePeriodSeconds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-healthcheckgraceperiodseconds


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: launchType

      ``AWS::ECS::Service.LaunchType``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-launchtype


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: loadBalancers

      ``AWS::ECS::Service.LoadBalancers``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-loadbalancers


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.LoadBalancerProperty` or undefined


   .. py:attribute:: networkConfiguration

      ``AWS::ECS::Service.NetworkConfiguration``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-networkconfiguration


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.NetworkConfigurationProperty` or undefined


   .. py:attribute:: placementConstraints

      ``AWS::ECS::Service.PlacementConstraints``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-placementconstraints


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.PlacementConstraintProperty` or undefined


   .. py:attribute:: placementStrategies

      ``AWS::ECS::Service.PlacementStrategies``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-placementstrategies


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.PlacementStrategyProperty` or undefined


   .. py:attribute:: platformVersion

      ``AWS::ECS::Service.PlatformVersion``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-platformversion


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: role

      ``AWS::ECS::Service.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-role


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: serviceName

      ``AWS::ECS::Service.ServiceName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-servicename


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: serviceRegistries

      ``AWS::ECS::Service.ServiceRegistries``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-service.html#cfn-ecs-service-serviceregistries


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.ServiceResource.ServiceRegistryProperty` or undefined


TaskDefinitionResource
~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TaskDefinitionResource(parent, name, [properties])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource;

      .. code-tab:: javascript

         const { cloudformation.TaskDefinitionResource } = require('@aws-cdk/aws-ecs');

      .. code-tab:: typescript

         import { cloudformation.TaskDefinitionResource } from '@aws-cdk/aws-ecs';



   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TaskDefinitionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TaskDefinitionResource``
   :type properties: :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ContainerDefinitionProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.ContainerDefinitionProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.ContainerDefinitionProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.ContainerDefinitionProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: command

         ``TaskDefinitionResource.ContainerDefinitionProperty.Command``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-command


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: cpu

         ``TaskDefinitionResource.ContainerDefinitionProperty.Cpu``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-cpu


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: disableNetworking

         ``TaskDefinitionResource.ContainerDefinitionProperty.DisableNetworking``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-disablenetworking


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dnsSearchDomains

         ``TaskDefinitionResource.ContainerDefinitionProperty.DnsSearchDomains``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-dnssearchdomains


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dnsServers

         ``TaskDefinitionResource.ContainerDefinitionProperty.DnsServers``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-dnsservers


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dockerLabels

         ``TaskDefinitionResource.ContainerDefinitionProperty.DockerLabels``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-dockerlabels


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: dockerSecurityOptions

         ``TaskDefinitionResource.ContainerDefinitionProperty.DockerSecurityOptions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-dockersecurityoptions


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: entryPoint

         ``TaskDefinitionResource.ContainerDefinitionProperty.EntryPoint``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-entrypoint


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: environment

         ``TaskDefinitionResource.ContainerDefinitionProperty.Environment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-environment


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.KeyValuePairProperty` or undefined


      .. py:attribute:: essential

         ``TaskDefinitionResource.ContainerDefinitionProperty.Essential``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-essential


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: extraHosts

         ``TaskDefinitionResource.ContainerDefinitionProperty.ExtraHosts``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-extrahosts


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.HostEntryProperty` or undefined


      .. py:attribute:: healthCheck

         ``TaskDefinitionResource.ContainerDefinitionProperty.HealthCheck``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-healthcheck


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.HealthCheckProperty` or undefined


      .. py:attribute:: hostname

         ``TaskDefinitionResource.ContainerDefinitionProperty.Hostname``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-hostname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: image

         ``TaskDefinitionResource.ContainerDefinitionProperty.Image``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-image


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: links

         ``TaskDefinitionResource.ContainerDefinitionProperty.Links``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-links


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: linuxParameters

         ``TaskDefinitionResource.ContainerDefinitionProperty.LinuxParameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-linuxparameters


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.LinuxParametersProperty` or undefined


      .. py:attribute:: logConfiguration

         ``TaskDefinitionResource.ContainerDefinitionProperty.LogConfiguration``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-logconfiguration


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.LogConfigurationProperty` or undefined


      .. py:attribute:: memory

         ``TaskDefinitionResource.ContainerDefinitionProperty.Memory``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-memory


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: memoryReservation

         ``TaskDefinitionResource.ContainerDefinitionProperty.MemoryReservation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-memoryreservation


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: mountPoints

         ``TaskDefinitionResource.ContainerDefinitionProperty.MountPoints``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-mountpoints


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.MountPointProperty` or undefined


      .. py:attribute:: name

         ``TaskDefinitionResource.ContainerDefinitionProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: portMappings

         ``TaskDefinitionResource.ContainerDefinitionProperty.PortMappings``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-portmappings


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.PortMappingProperty` or undefined


      .. py:attribute:: privileged

         ``TaskDefinitionResource.ContainerDefinitionProperty.Privileged``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-privileged


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: readonlyRootFilesystem

         ``TaskDefinitionResource.ContainerDefinitionProperty.ReadonlyRootFilesystem``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-readonlyrootfilesystem


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: ulimits

         ``TaskDefinitionResource.ContainerDefinitionProperty.Ulimits``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-ulimits


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.UlimitProperty` or undefined


      .. py:attribute:: user

         ``TaskDefinitionResource.ContainerDefinitionProperty.User``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-user


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: volumesFrom

         ``TaskDefinitionResource.ContainerDefinitionProperty.VolumesFrom``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-volumesfrom


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.VolumeFromProperty` or undefined


      .. py:attribute:: workingDirectory

         ``TaskDefinitionResource.ContainerDefinitionProperty.WorkingDirectory``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions.html#cfn-ecs-taskdefinition-containerdefinition-workingdirectory


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: DeviceProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.DeviceProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.DeviceProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.DeviceProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: containerPath

         ``TaskDefinitionResource.DeviceProperty.ContainerPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-device.html#cfn-ecs-taskdefinition-device-containerpath


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostPath

         ``TaskDefinitionResource.DeviceProperty.HostPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-device.html#cfn-ecs-taskdefinition-device-hostpath


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: permissions

         ``TaskDefinitionResource.DeviceProperty.Permissions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-device.html#cfn-ecs-taskdefinition-device-permissions


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: HealthCheckProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.HealthCheckProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.HealthCheckProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.HealthCheckProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: command

         ``TaskDefinitionResource.HealthCheckProperty.Command``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-healthcheck.html#cfn-ecs-taskdefinition-healthcheck-command


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: interval

         ``TaskDefinitionResource.HealthCheckProperty.Interval``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-healthcheck.html#cfn-ecs-taskdefinition-healthcheck-interval


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: retries

         ``TaskDefinitionResource.HealthCheckProperty.Retries``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-healthcheck.html#cfn-ecs-taskdefinition-healthcheck-retries


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: startPeriod

         ``TaskDefinitionResource.HealthCheckProperty.StartPeriod``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-healthcheck.html#cfn-ecs-taskdefinition-healthcheck-startperiod


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: timeout

         ``TaskDefinitionResource.HealthCheckProperty.Timeout``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-healthcheck.html#cfn-ecs-taskdefinition-healthcheck-timeout


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: HostEntryProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.HostEntryProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.HostEntryProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.HostEntryProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: hostname

         ``TaskDefinitionResource.HostEntryProperty.Hostname``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-hostentry.html#cfn-ecs-taskdefinition-containerdefinition-hostentry-hostname


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: ipAddress

         ``TaskDefinitionResource.HostEntryProperty.IpAddress``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-hostentry.html#cfn-ecs-taskdefinition-containerdefinition-hostentry-ipaddress


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: HostVolumePropertiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.HostVolumePropertiesProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.HostVolumePropertiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.HostVolumePropertiesProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: sourcePath

         ``TaskDefinitionResource.HostVolumePropertiesProperty.SourcePath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-volumes-host.html#cfn-ecs-taskdefinition-volumes-host-sourcepath


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KernelCapabilitiesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.KernelCapabilitiesProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.KernelCapabilitiesProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.KernelCapabilitiesProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: add

         ``TaskDefinitionResource.KernelCapabilitiesProperty.Add``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-kernelcapabilities.html#cfn-ecs-taskdefinition-kernelcapabilities-add


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: drop

         ``TaskDefinitionResource.KernelCapabilitiesProperty.Drop``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-kernelcapabilities.html#cfn-ecs-taskdefinition-kernelcapabilities-drop


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: KeyValuePairProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.KeyValuePairProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.KeyValuePairProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.KeyValuePairProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: name

         ``TaskDefinitionResource.KeyValuePairProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-environment.html#cfn-ecs-taskdefinition-containerdefinition-environment-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: value

         ``TaskDefinitionResource.KeyValuePairProperty.Value``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-environment.html#cfn-ecs-taskdefinition-containerdefinition-environment-value


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LinuxParametersProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.LinuxParametersProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.LinuxParametersProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.LinuxParametersProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: capabilities

         ``TaskDefinitionResource.LinuxParametersProperty.Capabilities``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-linuxparameters.html#cfn-ecs-taskdefinition-linuxparameters-capabilities


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.KernelCapabilitiesProperty` or undefined


      .. py:attribute:: devices

         ``TaskDefinitionResource.LinuxParametersProperty.Devices``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-linuxparameters.html#cfn-ecs-taskdefinition-linuxparameters-devices


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.DeviceProperty` or undefined


      .. py:attribute:: initProcessEnabled

         ``TaskDefinitionResource.LinuxParametersProperty.InitProcessEnabled``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-linuxparameters.html#cfn-ecs-taskdefinition-linuxparameters-initprocessenabled


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: LogConfigurationProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.LogConfigurationProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.LogConfigurationProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.LogConfigurationProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: logDriver

         ``TaskDefinitionResource.LogConfigurationProperty.LogDriver``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-logconfiguration.html#cfn-ecs-taskdefinition-containerdefinition-logconfiguration-logdriver


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: options

         ``TaskDefinitionResource.LogConfigurationProperty.Options``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-logconfiguration.html#cfn-ecs-taskdefinition-containerdefinition-logconfiguration-options


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: MountPointProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.MountPointProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.MountPointProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.MountPointProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: containerPath

         ``TaskDefinitionResource.MountPointProperty.ContainerPath``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-mountpoints.html#cfn-ecs-taskdefinition-containerdefinition-mountpoints-containerpath


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: readOnly

         ``TaskDefinitionResource.MountPointProperty.ReadOnly``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-mountpoints.html#cfn-ecs-taskdefinition-containerdefinition-mountpoints-readonly


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sourceVolume

         ``TaskDefinitionResource.MountPointProperty.SourceVolume``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-mountpoints.html#cfn-ecs-taskdefinition-containerdefinition-mountpoints-sourcevolume


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PortMappingProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.PortMappingProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.PortMappingProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.PortMappingProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: containerPort

         ``TaskDefinitionResource.PortMappingProperty.ContainerPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-portmappings.html#cfn-ecs-taskdefinition-containerdefinition-portmappings-containerport


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: hostPort

         ``TaskDefinitionResource.PortMappingProperty.HostPort``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-portmappings.html#cfn-ecs-taskdefinition-containerdefinition-portmappings-readonly


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: protocol

         ``TaskDefinitionResource.PortMappingProperty.Protocol``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-portmappings.html#cfn-ecs-taskdefinition-containerdefinition-portmappings-sourcevolume


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TaskDefinitionPlacementConstraintProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: expression

         ``TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty.Expression``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-taskdefinitionplacementconstraint.html#cfn-ecs-taskdefinition-taskdefinitionplacementconstraint-expression


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: type

         ``TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-taskdefinitionplacementconstraint.html#cfn-ecs-taskdefinition-taskdefinitionplacementconstraint-type


         :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: UlimitProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.UlimitProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.UlimitProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.UlimitProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: hardLimit

         ``TaskDefinitionResource.UlimitProperty.HardLimit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-ulimit.html#cfn-ecs-taskdefinition-containerdefinition-ulimit-hardlimit


         :type: number or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``TaskDefinitionResource.UlimitProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-ulimit.html#cfn-ecs-taskdefinition-containerdefinition-ulimit-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: softLimit

         ``TaskDefinitionResource.UlimitProperty.SoftLimit``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-ulimit.html#cfn-ecs-taskdefinition-containerdefinition-ulimit-softlimit


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: VolumeFromProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.VolumeFromProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.VolumeFromProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.VolumeFromProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: readOnly

         ``TaskDefinitionResource.VolumeFromProperty.ReadOnly``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-volumesfrom.html#cfn-ecs-taskdefinition-containerdefinition-volumesfrom-readonly


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: sourceContainer

         ``TaskDefinitionResource.VolumeFromProperty.SourceContainer``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-containerdefinitions-volumesfrom.html#cfn-ecs-taskdefinition-containerdefinition-volumesfrom-sourcecontainer


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: VolumeProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: java

            import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResource.VolumeProperty;

         .. code-tab:: javascript

            // cloudformation.TaskDefinitionResource.VolumeProperty is an interface

         .. code-tab:: typescript

            import { cloudformation.TaskDefinitionResource.VolumeProperty } from '@aws-cdk/aws-ecs';





      .. py:attribute:: host

         ``TaskDefinitionResource.VolumeProperty.Host``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-volumes.html#cfn-ecs-taskdefinition-volumes-host


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.HostVolumePropertiesProperty` or undefined


      .. py:attribute:: name

         ``TaskDefinitionResource.VolumeProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-ecs-taskdefinition-volumes.html#cfn-ecs-taskdefinition-volumes-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



TaskDefinitionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TaskDefinitionResourceProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: java

         import software.amazon.awscdk.services.ecs.cloudformation.TaskDefinitionResourceProps;

      .. code-tab:: javascript

         // cloudformation.TaskDefinitionResourceProps is an interface

      .. code-tab:: typescript

         import { cloudformation.TaskDefinitionResourceProps } from '@aws-cdk/aws-ecs';





   .. py:attribute:: containerDefinitions

      ``AWS::ECS::TaskDefinition.ContainerDefinitions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-containerdefinitions


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.ContainerDefinitionProperty` or undefined


   .. py:attribute:: cpu

      ``AWS::ECS::TaskDefinition.Cpu``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-cpu


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: executionRoleArn

      ``AWS::ECS::TaskDefinition.ExecutionRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-executionrolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: family

      ``AWS::ECS::TaskDefinition.Family``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-family


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: memory

      ``AWS::ECS::TaskDefinition.Memory``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-memory


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: networkMode

      ``AWS::ECS::TaskDefinition.NetworkMode``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-networkmode


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: placementConstraints

      ``AWS::ECS::TaskDefinition.PlacementConstraints``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-placementconstraints


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.TaskDefinitionPlacementConstraintProperty` or undefined


   .. py:attribute:: requiresCompatibilities

      ``AWS::ECS::TaskDefinition.RequiresCompatibilities``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-requirescompatibilities


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: taskRoleArn

      ``AWS::ECS::TaskDefinition.TaskRoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-taskrolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: volumes

      ``AWS::ECS::TaskDefinition.Volumes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-ecs-taskdefinition.html#cfn-ecs-taskdefinition-volumes


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-ecs.cloudformation.TaskDefinitionResource.VolumeProperty` or undefined



.. py:currentmodule:: @aws-cdk/aws-ecs

